--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
         - go get github.com/golang/protobuf/protoc-gen-go
         - export PATH="$PATH:$(go env GOPATH)/bin"
       script:
-        - protoc --go_out=plugins=grpc:./pb-go service.proto
+        - protoc --go-grpc_out=./pb-go service.proto
     - stage: generateDartFiles
       os: osx
       language: dart
