--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
         - brew upgrade protobuf
         - go get github.com/golang/protobuf/protoc-gen-go
         - export PATH="$PATH:$(go env GOPATH)/bin"
+        - echo $(go env GOPATH)
+        - echo "$PATH:$(go env GOPATH)/bin"
       script:
         - protoc --go-grpc_out=./pb-go service.proto
     - stage: generateDartFiles
