--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
         - export GO111MODULE=on
         - go get google.golang.org/grpc@v1.28.1
         - brew upgrade protobuf
-        - go get github.com/golang/protobuf/protoc-gen-go
+        - go get -u github.com/golang/protobuf/protoc-gen-go
         - export PATH="$PATH:$(go env GOPATH)/bin"
         - echo $(go env GOPATH)
         - echo "$PATH:$(go env GOPATH)/bin"
