--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ jobs:
         - go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
         - export PATH="$PATH:$(go env GOPATH)/bin"
       script:
-        - protoc --go_out=./pb-go --go_opt=paths=source_relative  --go-grpc_out=./pb-go --go-grpc_opt=paths=source_relative service.proto
+        - chmod +x generate.sh
+        - ./generate.sh
     - stage: generateDartFiles
       os: osx
       language: dart
