--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 0.0.1
 homepage: https://github.com/OpenIotHUb
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: '>=2.3.0 <3.0.0'
 
 dependencies:
   async: ^2.2.0
@@ -18,6 +18,7 @@ dependencies:
   grpc: ^1.0.2
   #  grpc协议
   protobuf: ^1.0.1
+  fixnum: ^0.10.9
 
 dev_dependencies:
   build_runner: ^1.5.2
