--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.0
 homepage: https://github.com/OpenIotHUb
 
 environment:
-  sdk: '>=3.0.0-0 <4.0.0'
+  sdk: ^3.0.0
 
 dependencies:
   async: ^2.5.0
