--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: iot_manager_grpc_api
 description: OpenioTHub Dart gRPC.
 
-version: 1.0.0
+version: 1.0.0+1
 
 homepage: https://github.com/OpenIotHUb
 
